// SPDX-License-Identifier: AGPL-3.0-only
// Provenance-includes-location: https://github.com/cortexproject/cortex/blob/master/pkg/ingester/wal.proto
// Provenance-includes-license: Apache-2.0
// Provenance-includes-copyright: The Cortex Authors.

syntax = "proto3";

package ingester;

option go_package = "ingester";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/grafana/mimir/pkg/cortexpb/cortex.proto";
import "github.com/grafana/mimir/pkg/ingester/client/ingester.proto";

message Series {
  string user_id = 1;
  uint64 fingerprint = 2;
  repeated cortexpb.LabelPair labels = 3 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/grafana/mimir/pkg/cortexpb.LabelAdapter"];
  repeated cortex.Chunk chunks = 4 [(gogoproto.nullable) = false];
}
